# personal_website

./: README.md
.github/workflows/: jekyll-gh-pages.yml
backend/: Cargo.toml
backend/src/: main.rs  models.rs  routes.rs  utils.rs
frontend/: index.html  style.css
frontend/docs/: blogs.md  design-todo&notes.md  index.md  projects.md
frontend/docs/blog_files/: blog_about_personal_website-31-07-2023.md
src/: index.html
