[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_contrib = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
comrak = ">=0.10.1"
serde_json = "1.0"
syntect = "5.0.0"  # Add this line to specify the version of syntect
regex = "1.9.1"
pulldown-cmark = "0.9.3"
log = "0.4.19"
simple_logger = "4.2.0"
env_logger = "0.10.0"

[patch.crates-io]
syntect = { git = "https://github.com/trishume/syntect", branch = "master" }  # Add this line to patch syntect
